# CMakeExp

./: CMakeLists.txt  main.cpp
libA/: CMakeLists.txt  libA.cpp  libA.h
libB/: CMakeLists.txt  libB.cpp  libB.h
libC/: CMakeLists.txt  libC.cpp  libC.h
